--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -64,6 +64,8 @@
 	    	</code>
         </pre>
 
+        <h3>4. Try out some Examples</h3>
+
 	</section>
 	<script>
       $(document).ready(function(){
