--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -64,8 +64,11 @@
 	    	</code>
         </pre>
 
-        <h3>4. Try out some Examples</h3>
-
+        <h3>Just try out some Examples</h3>
+        
+        <div id="examples">
+             
+        </div>
 	</section>
 	<script>
       $(document).ready(function(){
