--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -67,7 +67,8 @@
         <h3>Just try out some Examples</h3>
         
         <div id="examples">
-             
+             <a href="./examples/simple">Simple FFT Table</a>
+             <a href="./examples/simple">FFT Plotter using Chart.js</a>
         </div>
 	</section>
 	<script>
