--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -68,7 +68,7 @@
         
         <div id="examples">
              <a href="./examples/simple">Simple FFT Table</a>
-             <a href="./examples/simple">FFT Plotter using Chart.js</a>
+             <a href="./examples/plot">FFT Plotter using Chart.js</a>
         </div>
 	</section>
 	<script>
