--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -21,10 +21,41 @@
 	    <div id="root">
 	    </div>
 	    <div id="anchors">
+	    	<a href="#section_intro" class="anchor">Intro</a>
           	<a href="#section_usage" class="anchor">Usage</a>
 	        <a href="#section_donate" class="anchor">Donate</a>
 	    </div>
 	</section>
+    <section id="section_intro">
+		<h1>Introducing Oink FFT: A Quick and Dirty JavaScript FFT Implementation</h1>
+
+		<p>Are you looking to dive into Fourier analysis without getting lost in complex algorithms and mathematical intricacies? Meet Oink FFT - your quick and dirty solution for Fast Fourier Transform in JavaScript.</p>
+
+		<h2>What is FFT?</h2>
+
+		<p>FFT, or Fast Fourier Transform, is a powerful algorithm used in digital signal processing to efficiently compute the Discrete Fourier Transform (DFT) of a sequence. It transforms a signal from its time-domain representation to its frequency-domain representation, revealing the underlying frequencies present in the signal.</p>
+
+		<h2>Why Oink FFT?</h2>
+
+		<p>Oink FFT is designed for simplicity and ease of use. It provides a straightforward implementation of the FFT algorithm in JavaScript, allowing you to perform frequency analysis on your data with minimal effort.</p>
+
+		<h3>Key Features:</h3>
+
+		<ol>
+		  <li><strong>Simplicity:</strong> Oink FFT is designed to be easy to understand and use, making it perfect for beginners and casual users.</li>
+		  <li><strong>Quick and Dirty:</strong> This FFT implementation prioritizes simplicity and speed, making it suitable for rapid prototyping and experimentation.</li>
+		  <li><strong>JavaScript-Based:</strong> Oink FFT is written entirely in JavaScript, making it accessible to web developers and compatible with modern web applications.</li>
+		</ol>
+
+		<h2>Getting Started:</h2>
+
+		<p>To start using Oink FFT, simply import the library into your JavaScript project and follow the intuitive API to perform FFT operations on your data.</p>
+
+		<h2>Conclusion:</h2>
+
+		<p>Whether you're exploring signal processing concepts, building audio visualizations, or experimenting with frequency analysis, Oink FFT provides a simple and effective solution to get you started quickly. Dive into the world of Fourier analysis with Oink FFT and unlock the secrets hidden within your data.</p>
+
+    </section>
 	<section id="section_usage">
         <h2>How To Use OINK FFT</h2>
 
@@ -67,8 +98,8 @@
         <h3>Just try out some Examples</h3>
         
         <div id="examples">
-             <a href="./examples/simple">Simple FFT Table</a>
-             <a href="./examples/plot">FFT Plotter using Chart.js</a>
+             <a href="./examples/simple" target="_blank">Simple FFT Table</a>
+             <a href="./examples/plot" target="_blank">FFT Plotter using Chart.js</a>
         </div>
 	</section>
 	<script>
