--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -76,6 +76,7 @@
 	            <span class="comment">//[re, im, re, im, re, im ...]</span>
 	    		<span>let realInput = new Float32Array([/* Fill with 1024 Float Values */]);</span>
 	    	    <span>let spectrum  = OINK.fftReal1024(realInput);</span>
+	    	    <span>console.log("FFT Result:", spectrum);</span>
 	    	</code>
 	    </pre>
 
