--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -124,7 +124,7 @@
             const totalHeight = $("#section_main").height();
             const opacity = (scrollPosition / totalHeight);
             // Apply the opacity to the section background
-            $("#section_usage").css("background-color", `rgba(50, 50, 50, ${opacity})`);
+            $("#section_intro").css("background-color", `rgba(50, 50, 50, ${opacity})`);
         }
 
         // Attach event listener to the scroll event
