--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -37,14 +37,16 @@
 
 		<h2>Why Oink FFT?</h2>
 
-		<p>Oink FFT is designed for simplicity and ease of use. It provides a straightforward implementation of the FFT algorithm in JavaScript, allowing you to perform frequency analysis on your data with minimal effort.</p>
+		<p>Oink FFT is designed for simplicity and ease of use. It provides a pretty quick FFT algorithm in JavaScript, allowing you to perform frequency analysis on your data with minimal effort.</p>
 
 		<h3>Key Features:</h3>
 
 		<ol>
 		  <li><strong>Simplicity:</strong> Oink FFT is designed to be easy to understand and use, making it perfect for beginners and casual users.</li>
 		  <li><strong>Quick and Dirty:</strong> This FFT implementation prioritizes simplicity and speed, making it suitable for rapid prototyping and experimentation.</li>
-		  <li><strong>JavaScript-Based:</strong> Oink FFT is written entirely in JavaScript, making it accessible to web developers and compatible with modern web applications.</li>
+		  <li><strong>JavaScript-Based:</strong> Oink FFT is written in JavaScript, making it accessible to web developers and compatible with modern web applications.</li>
+		  <li><strong>Speed-Optimized:</strong> Leveraging WebAssembly (WASM) and harnessing specific mathematical Fourier Intrinsics, this implementation is finely tuned for exceptional speed.</li>
+		  <li><strong>Competitive Performance:</strong> With its optimized speed, Oink FFT can effectively compete with other available FFT implementations."</li>
 		</ol>
 
 		<h2>Getting Started:</h2>
