--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -29,7 +29,8 @@
     <section id="section_intro">
 		<h1>Introducing Oink FFT: A Quick and Dirty JavaScript FFT Implementation</h1>
 
-		<p>Are you looking to dive into Fourier analysis without getting lost in complex algorithms and mathematical intricacies?<br>Meet Oink FFT - your quick and dirty solution for Fast Fourier Transform in JavaScript.</p>
+		<p>Are you looking to dive into Fourier analysis without getting lost in complex algorithms and mathematical intricacies?<br>Meet Oink FFT - your quick and dirty solution for Fast Fourier Transform in JavaScript.<br>
+		Whether you're exploring signal processing concepts, building audio visualizations, or experimenting with frequency analysis, Oink FFT provides a simple and effective solution to get you started quickly. Dive into the world of Fourier analysis with Oink FFT and unlock the secrets hidden within your data.</p>
 
 		<h2>What is FFT?</h2>
 
@@ -52,10 +53,6 @@
 		<h2>Getting Started:</h2>
 
 		<p>To start using Oink FFT, simply import the library into your JavaScript project and follow the intuitive API to perform FFT operations on your data.</p>
-
-		<h2>Conclusion:</h2>
-
-		<p>Whether you're exploring signal processing concepts, building audio visualizations, or experimenting with frequency analysis, Oink FFT provides a simple and effective solution to get you started quickly. Dive into the world of Fourier analysis with Oink FFT and unlock the secrets hidden within your data.</p>
 
     </section>
 	<section id="section_usage">
@@ -137,7 +134,7 @@
             const totalHeight = $("#section_usage").height();
             const opacity = (scrollPosition / totalHeight);
             // Apply the opacity to the section background
-            $("#section_usage").css("background-color", `rgba(100, 50, 50, ${opacity})`);
+            $("#section_usage").css("background-color", `rgba(10, 10, 10, ${opacity})`);
         }
 
         // Attach event listener to the scroll event
