--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -26,82 +26,85 @@
 	        <a href="#section_donate" class="anchor">Donate</a>
 	    </div>
 	</section>
-    <section id="section_intro">
-		<h1>Introducing Oink FFT: A Quick and Dirty JavaScript FFT Implementation</h1>
+	<div class="split_section">
+	    <section id="section_intro">
 
-		<p>Are you looking to dive into Fourier analysis without getting lost in complex algorithms and mathematical intricacies?<br>Meet Oink FFT - your quick and dirty solution for Fast Fourier Transform in JavaScript.<br>
-		Whether you're exploring signal processing concepts, building audio visualizations, or experimenting with frequency analysis, Oink FFT provides a simple and effective solution to get you started quickly. Dive into the world of Fourier analysis with Oink FFT and unlock the secrets hidden within your data.</p>
+			<h1>Introducing Oink FFT: A Quick and Dirty JavaScript FFT Implementation</h1>
 
-		<h2>What is FFT?</h2>
+			<p>Are you looking to dive into Fourier analysis without getting lost in complex algorithms and mathematical intricacies?<br>Meet Oink FFT - your quick and dirty solution for Fast Fourier Transform in JavaScript.<br>
+			Whether you're exploring signal processing concepts, building audio visualizations, or experimenting with frequency analysis, Oink FFT provides a simple and effective solution to get you started quickly. Dive into the world of Fourier analysis with Oink FFT and unlock the secrets hidden within your data.</p>
 
-		<p>FFT, or Fast Fourier Transform, is a powerful algorithm used in digital signal processing to efficiently compute the Discrete Fourier Transform (DFT) of a sequence. It transforms a signal from its time-domain representation to its frequency-domain representation, revealing the underlying frequencies present in the signal.</p>
+			<h2>What is FFT?</h2>
 
-		<h2>Why Oink FFT?</h2>
+			<p>FFT, or Fast Fourier Transform, is a powerful algorithm used in digital signal processing to efficiently compute the Discrete Fourier Transform (DFT) of a sequence. It transforms a signal from its time-domain representation to its frequency-domain representation, revealing the underlying frequencies present in the signal.</p>
 
-		<p>Oink FFT is designed for simplicity and ease of use. It provides a pretty quick FFT algorithm in JavaScript, allowing you to perform frequency analysis on your data with minimal effort.</p>
+			<h2>Why Oink FFT?</h2>
 
-		<h3>Key Features:</h3>
+			<p>Oink FFT is designed for simplicity and ease of use. It provides a pretty quick FFT algorithm in JavaScript, allowing you to perform frequency analysis on your data with minimal effort.</p>
 
-		<ol>
-		  <li><strong>Simplicity:</strong> Oink FFT is designed to be easy to understand and use, making it perfect for beginners and casual users.</li>
-		  <li><strong>Quick and Dirty:</strong> This FFT implementation prioritizes simplicity and speed, making it suitable for rapid prototyping and experimentation.</li>
-		  <li><strong>JavaScript-Based:</strong> Oink FFT is written in JavaScript, making it accessible to web developers and compatible with modern web applications.</li>
-		  <li><strong>Speed-Optimized:</strong> Leveraging WebAssembly (WASM) and harnessing specific mathematical Fourier Intrinsics, this implementation is finely tuned for exceptional speed.</li>
-		  <li><strong>Competitive Performance:</strong> With its optimized speed, Oink FFT can effectively compete with other available FFT implementations."</li>
-		</ol>
+			<h3>Key Features:</h3>
 
-		<h2>Getting Started:</h2>
+			<ol>
+			  <li><strong>Simplicity:</strong> Oink FFT is designed to be easy to understand and use, making it perfect for beginners and casual users.</li>
+			  <li><strong>Quick and Dirty:</strong> This FFT implementation prioritizes simplicity and speed, making it suitable for rapid prototyping and experimentation.</li>
+			  <li><strong>JavaScript-Based:</strong> Oink FFT is written in JavaScript, making it accessible to web developers and compatible with modern web applications.</li>
+			  <li><strong>Speed-Optimized:</strong> Leveraging WebAssembly (WASM) and harnessing specific mathematical Fourier Intrinsics, this implementation is finely tuned for exceptional speed.</li>
+			  <li><strong>Competitive Performance:</strong> With its optimized speed, Oink FFT can effectively compete with other available FFT implementations."</li>
+			</ol>
 
-		<p>To start using Oink FFT, simply import the library into your JavaScript project and follow the intuitive API to perform FFT operations on your data.</p>
+			<h2>Getting Started:</h2>
 
-    </section>
-	<section id="section_usage">
-        <h2>How To Use OINK FFT</h2>
+			<p>To start using Oink FFT, simply import the library into your JavaScript project and follow the intuitive API to perform FFT operations on your data.</p>
 
-	    <h3>1. Easy Import</h3>
-	    <pre>
-	    	<code>
-	    		<span class="comment">//To use this library, you first need to include it in your project.</span>
-	    		<span>import * as OINK from 'https://cdn.jsdelivr.net/gh/sch1z0net/oink@v0.1.5-alpha/oink_fft.js';</span>
-	    	</code>
-	    </pre>
+	    </section>
+		<section id="section_usage">
+	        <h2>How To Use OINK FFT</h2>
 
-	    <h3>2. Usage Example</h3>
-	    <pre>
-	    	<code>
-	            <span class="comment">//Here's how you can use the Forward FFT of size 1024</span>
-	            <span class="comment">//It returns the spectrum, a Float32Array of length = 2048</span>
-	            <span class="comment">//with real and imaginary values in alterning order</span>
-	            <span class="comment">//[re, im, re, im, re, im ...]</span>
-	    		<span>let realInput = new Float32Array([/* Fill with 1024 Float Values */]);</span>
-	    	    <span>let spectrum  = OINK.fftReal1024(realInput);</span>
-	    	    <span>console.log("FFT Result:", spectrum);</span>
-	    	</code>
-	    </pre>
+		    <h3>1. Easy Import</h3>
+		    <pre>
+		    	<code>
+		    		<span class="comment">//To use this library, you first need to include it in your project.</span>
+		    		<span>import * as OINK from 'https://cdn.jsdelivr.net/gh/sch1z0net/oink@v0.1.5-alpha/oink_fft.js';</span>
+		    	</code>
+		    </pre>
 
-	    <h3>3. Use different available FFT sizes</h3>
-	    <pre>
-	    	<code>
-	    		<span class="comment">// 128 input -> 256 spectrum</span>
-	    		<span>let spectrum  = OINK.fftReal128(realInput);</span>
-	    		<span class="comment">// 256 input -> 512 spectrum</span>
-	    	    <span>let spectrum  = OINK.fftReal256(realInput);</span>
-	    	    <span class="comment">// 512 input -> 1024 spectrum</span>
-	    	    <span>let spectrum  = OINK.fftReal512(realInput);</span>
-	    	    <span class="comment">// 1024 input -> 2048 spectrum</span>
-	    	    <span>let spectrum  = OINK.fftReal1024(realInput);</span>
-	    	    <span class="comment">// 2048 input -> 4096 spectrum</span>
-	    	    <span>let spectrum  = OINK.fftReal2048(realInput);</span>
-	    	</code>
-        </pre>
+		    <h3>2. Usage Example</h3>
+		    <pre>
+		    	<code>
+		            <span class="comment">//Here's how you can use the Forward FFT of size 1024</span>
+		            <span class="comment">//It returns the spectrum, a Float32Array of length = 2048</span>
+		            <span class="comment">//with real and imaginary values in alterning order</span>
+		            <span class="comment">//[re, im, re, im, re, im ...]</span>
+		    		<span>let realInput = new Float32Array([/* Fill with 1024 Float Values */]);</span>
+		    	    <span>let spectrum  = OINK.fftReal1024(realInput);</span>
+		    	    <span>console.log("FFT Result:", spectrum);</span>
+		    	</code>
+		    </pre>
 
-        <h3>Just try out some Examples</h3>
-        
-        <div id="examples">
-             <a href="./examples/simple" target="_blank">Simple FFT Table</a>
-             <a href="./examples/plot" target="_blank">FFT Plotter using Chart.js</a>
-        </div>
-	</section>
+		    <h3>3. Use different available FFT sizes</h3>
+		    <pre>
+		    	<code>
+		    		<span class="comment">// 128 input -> 256 spectrum</span>
+		    		<span>let spectrum  = OINK.fftReal128(realInput);</span>
+		    		<span class="comment">// 256 input -> 512 spectrum</span>
+		    	    <span>let spectrum  = OINK.fftReal256(realInput);</span>
+		    	    <span class="comment">// 512 input -> 1024 spectrum</span>
+		    	    <span>let spectrum  = OINK.fftReal512(realInput);</span>
+		    	    <span class="comment">// 1024 input -> 2048 spectrum</span>
+		    	    <span>let spectrum  = OINK.fftReal1024(realInput);</span>
+		    	    <span class="comment">// 2048 input -> 4096 spectrum</span>
+		    	    <span>let spectrum  = OINK.fftReal2048(realInput);</span>
+		    	</code>
+	        </pre>
+
+	        <h3>Just try out some Examples</h3>
+	        
+	        <div id="examples">
+	             <a href="./examples/simple" target="_blank">Simple FFT Table</a>
+	             <a href="./examples/plot" target="_blank">FFT Plotter using Chart.js</a>
+	        </div>
+		</section>
+   </div>
 	<script>
       $(document).ready(function(){
 		// Smooth scrolling behavior
