--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -104,7 +104,13 @@
 	             <a href="./examples/plot" target="_blank">FFT Plotter using Chart.js</a>
 	        </div>
 		</section>
-   </div>
+    </div>
+    <section id="section_donate">
+
+    </section>
+	<div id="footer">
+	</div>
+
 	<script>
       $(document).ready(function(){
 		// Smooth scrolling behavior
