--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -162,7 +162,7 @@
         // Get the sticky section element
 		const stickySection = document.getElementById('section_main');
 	    // Get the initial offset position of the sticky section
-		const stickyOffset = stickySection.offsetTop;
+		const stickyOffset = 100;
 
 		// Function to handle scrolling
 		window.addEventListener('scroll', function() {
