--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -160,7 +160,7 @@
 		// Function to handle scrolling
 		window.addEventListener('scroll', function() {
 		    // Get all the sections that you want to transition to
-		    const sections = document.querySelectorAll('.section');
+		    const sections = document.querySelectorAll('section');
 
 		    // Loop through each section
 		    sections.forEach(section => {
