--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -166,14 +166,13 @@
 		    // Calculate the height of the viewport
 		    const viewportHeight = window.innerHeight;
 		    // Loop through each section
-		    sections.forEach(section => {
-                if(section == currentSection){ break; }
+		    for (const section of sections) {
+                if(section == currentSection){ continue; }
                 
 		        // Get the position of the section relative to the viewport
 		        const rect = section.getBoundingClientRect();
 		        // Calculate the distance from the top of the section to the top of the viewport
 		        const sectionTop = rect.top;
-
 
                 let next = section.next();
                 let prev = section.previous();
@@ -196,8 +195,7 @@
 		            }	
                 }
 
-
-		    });
+		    };
 		});
 
 
