--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -165,17 +165,14 @@
 		    const sections = document.querySelectorAll('section');
 		    // Calculate the height of the viewport
 		    const viewportHeight = window.innerHeight;
-		    // Loop through each section
-		    for (const section of sections) {
-                if(section == currentSection){ continue; }
-                
+
 		        // Get the position of the section relative to the viewport
-		        const rect = section.getBoundingClientRect();
+		        const rect = currentSection.getBoundingClientRect();
 		        // Calculate the distance from the top of the section to the top of the viewport
 		        const sectionTop = rect.top;
 
-                let next = section.next();
-                let prev = section.previous();
+                let next = currentSection.next();
+                let prev = currentSection.previous();
                 
                 if(next){
                 	// Check if the current section is at least 75% out of the viewport
@@ -194,8 +191,6 @@
 		               currentSection = prev;
 		            }	
                 }
-
-		    };
 		});
 
 
