--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -165,10 +165,10 @@
 		    const viewportHeight = window.innerHeight;
 
 	        // Calculate the distance from the top of the section to the top of the viewport
-	        const sectionTop = currentSection.offset().top;
+	        const sectionTop = $(currentSection).offset().top;
 
-            let next = currentSection.next();
-            let prev = currentSection.previous();
+            let next = $(currentSection).next();
+            let prev = $(currentSection).previous();
             
             if(next){
             	// Check if the current section is at least 75% out of the viewport
