--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -168,7 +168,7 @@
 	        const sectionTop = currentSection.offset().top;
 
             let next = currentSection.next();
-            let prev = currentSection.previous();
+            let prev = currentSection.prev();
             
             if(next){
             	// Check if the current section is at least 75% out of the viewport
