--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -164,11 +164,13 @@
 		    // Calculate the height of the viewport
 		    const viewportHeight = window.innerHeight;
 
+	        // Get the position of the section relative to the viewport
+	        const rect = currentSection[0].getBoundingClientRect();
 	        // Calculate the distance from the top of the section to the top of the viewport
-	        const sectionTop = currentSection.offset().top;
+	        const sectionTop = rect.top;
 
             let next = currentSection.next();
-            let prev = currentSection.prev();
+            let prev = currentSection.previous();
             
             if(next){
             	// Check if the current section is at least 75% out of the viewport
