--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -170,7 +170,7 @@
 	        const sectionTop = rect.top;
 
             let next = currentSection.next();
-            let prev = currentSection.previous();
+            let prev = currentSection.prev();
             
             if(next){
             	// Check if the current section is at least 75% out of the viewport
