--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -172,7 +172,7 @@
             let next = currentSection.next();
             let prev = currentSection.prev();
             
-            if(next){
+            if(next.length !== 0){
             	// Check if the current section is at least 75% out of the viewport
 	            if (sectionTop >= 0.75 * viewportHeight) {
 	               // If the current section is 75% out of the viewport, scroll to it
@@ -181,7 +181,7 @@
 	            }
             }
 
-            if(prev){
+            if(prev.length !== 0){
             	// Check if the current section is at least 75% out of the viewport
 	            if (sectionTop <= -0.75 * viewportHeight) {
 	               // If the current section is 75% out of the viewport, scroll to it
