--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -105,9 +105,10 @@
     </section>
 	<div id="footer">
 	    <div id="anchors">
-	    	<a id="a1" href="#section_intro" class="anchor">Intro</a>
-          	<a id="a2" href="#section_usage" class="anchor">Usage</a>
-	        <a id="a3" href="#section_donate" class="anchor">Donate</a>
+	    	<a href="#section_main" class="anchor">Benchmark</a>
+	    	<a href="#section_intro" class="anchor">Intro</a>
+          	<a href="#section_usage" class="anchor">Usage</a>
+	        <a href="#section_donate" class="anchor">Donate</a>
 	    </div>
 	</div>
 
