--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -160,36 +160,33 @@
 
         let currentSection = $("#section_main");
 
-		// Function to handle scrolling
-		window.addEventListener('scroll', function() {
-		    // Calculate the height of the viewport
-		    const viewportHeight = window.innerHeight;
+let scrolling = false;
 
-	        // Get the position of the section relative to the viewport
-	        const rect = currentSection[0].getBoundingClientRect();
-	        // Calculate the distance from the top of the section to the top of the viewport
-	        const sectionTop = rect.top;
+window.addEventListener('scroll', function() {
+    if (!scrolling) {
+        const viewportHeight = window.innerHeight;
+        const rect = currentSection[0].getBoundingClientRect();
+        const sectionTop = rect.top;
 
-            let next = currentSection.next();
-            let prev = currentSection.prev();
-            
-            if(prev.length !== 0){
-	            if (sectionTop >= 0.25 * viewportHeight) {
-	               // If the current section is 75% out of the viewport, scroll to it
-	               prev[0].scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'start' });
-	               currentSection = prev;
-	            }
-            }
+        let next = currentSection.next();
+        let prev = currentSection.prev();
+        
+        if (prev.length !== 0 && sectionTop >= 0.25 * viewportHeight) {
+            scrollingProgrammatically = true;
+            prev[0].scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'start' });
+            currentSection = prev;
+            setTimeout(() => { scrolling = false; }, 500); // Adjust delay as needed
+        }
 
-            if(next.length !== 0){
-	            if (sectionTop <= -0.25 * viewportHeight) {
-	               // If the current section is 75% out of the viewport, scroll to it
-	               next[0].scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'start' });
-	               currentSection = next;
-	            }	
-            }
+        if (next.length !== 0 && sectionTop <= -0.25 * viewportHeight) {
+            scrollingProgrammatically = true;
+            next[0].scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'start' });
+            currentSection = next;
+            setTimeout(() => { scrolling= false; }, 500); // Adjust delay as needed
+        }
+    }
+});
 
-		});
 
 
 
