--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -172,14 +172,14 @@
 		        let prev = currentSection.prev();
 		        
 		        if (prev.length !== 0 && sectionTop >= 0.25 * viewportHeight) {
-		            scrollingProgrammatically = true;
+		            scrolling = true;
 		            prev[0].scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'start' });
 		            currentSection = prev;
 		            setTimeout(() => { scrolling = false; }, 2000); // Adjust delay as needed
 		        }
 
 		        if (next.length !== 0 && sectionTop <= -0.25 * viewportHeight) {
-		            scrollingProgrammatically = true;
+		            scrolling = true;
 		            next[0].scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'start' });
 		            currentSection = next;
 		            setTimeout(() => { scrolling= false; }, 2000); // Adjust delay as needed
