--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -162,26 +162,29 @@
 
 		let scrolling = false;
 
+		// Function to handle scrolling
 		window.addEventListener('scroll', function() {
-		    if (!scrolling) {
-		        const viewportHeight = window.innerHeight;
-		        const rect = currentSection[0].getBoundingClientRect();
-		        const sectionTop = rect.top;
+		    // Calculate the height of the viewport
+		    const viewportHeight = window.innerHeight;
 
-		        let next = currentSection.next();
-		        let prev = currentSection.prev();
+		    // Get the position of the current section relative to the viewport
+		    const rect = currentSection[0].getBoundingClientRect();
+		    // Calculate the distance from the top of the current section to the top of the viewport
+		    const sectionTop = rect.top;
+
+		    // Check if the current section is 95% out of the viewport
+		    if (sectionTop >= 0.95 * viewportHeight || sectionTop <= -0.95 * viewportHeight) {
+		        // Determine the direction of scrolling (up or down)
+		        const direction = sectionTop < 0 ? 'up' : 'down';
 		        
-		        if (prev.length !== 0 && sectionTop >= 0.05 * viewportHeight) {
-		            scrolling = true;
-		            prev[0].scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'start' });
-		            currentSection = prev;
-		            setTimeout(() => { scrolling = false; }, 1000); // Adjust delay as needed
-		        }
+		        // Get the next or previous section based on the direction of scrolling
+		        const newSection = direction === 'up' ? currentSection.prev() : currentSection.next();
 
-		        if (next.length !== 0 && sectionTop <= -0.05 * viewportHeight) {
-		            scrolling = true;
-		            next[0].scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'start' });
-		            currentSection = next;
+		        // If there is a new section, scroll to it smoothly
+		        if (newSection.length !== 0) {
+		        	scrolling = true;
+		            newSection[0].scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'start' });
+		            currentSection = newSection;
 		            setTimeout(() => { scrolling= false; }, 1000); // Adjust delay as needed
 		        }
 		    }
