--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -173,7 +173,7 @@
 		    const sectionTop = rect.top;
 
 		    // Check if the current section is 95% out of the viewport
-		    if (sectionTop >= 0.05 * viewportHeight || sectionTop <= -0.05 * viewportHeight) {
+		    if (true) {
 		        // Determine the direction of scrolling (up or down)
 		        const direction = sectionTop < 0 ? 'up' : 'down';
 		        
@@ -185,7 +185,7 @@
 		        	scrolling = true;
 		            newSection[0].scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'start' });
 		            currentSection = newSection;
-		            setTimeout(() => { scrolling= false; }, 1000); // Adjust delay as needed
+		            setTimeout(() => { scrolling = false; }, 1000); // Adjust delay as needed
 		        }
 		    }
 		});
