--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -164,21 +164,9 @@
 
 		// Function to handle scrolling
 		window.addEventListener('scroll', function() {
-		    // Calculate the height of the viewport
-		    const viewportHeight = window.innerHeight;
-
-		    // Get the position of the current section relative to the viewport
-		    const rect = currentSection[0].getBoundingClientRect();
-		    // Calculate the distance from the top of the current section to the top of the viewport
-		    const sectionTop = rect.top;
-
-		    // Check if the current section is 95% out of the viewport
-		    if (true) {
-		        // Determine the direction of scrolling (up or down)
-		        const direction = sectionTop < 0 ? 'up' : 'down';
-		        
+			if(!scrolling){
 		        // Get the next or previous section based on the direction of scrolling
-		        const newSection = direction === 'up' ? currentSection.prev() : currentSection.next();
+		        const newSection = currentSection.prev();
 
 		        // If there is a new section, scroll to it smoothly
 		        if (newSection.length !== 0) {
