--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -163,7 +163,7 @@
 		let scrolling = false;
 
 		// Function to handle scrolling
-		window.addEventListener('scroll', function() {
+		window.addEventListener('scroll', function(event) {
             // Prevent default scrolling behavior
             event.preventDefault();
 
