--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -188,18 +188,15 @@
 		document.addEventListener("wheel", (event) => {
 		  event.preventDefault();
 		  event.stopPropagation();
-		  if(!scrolling){
           		// Get the next or previous section based on the direction of scrolling
 		        const newSection = currentSection.nextAll(".snappable").first();
 
 		        // If there is a new section, scroll to it smoothly
 		        if (newSection.length !== 0) {
-		        	scrolling = true;
 		            newSection[0].scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'start' });
 		            currentSection = newSection;
-		            setTimeout(() => { scrolling = false; }, 1000); // Adjust delay as needed
+		            setTimeout(() => { }, 2000); // Adjust delay as needed
 		        }
-		  }
 
 		}, { passive: false });
 
