--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -160,7 +160,7 @@
 
         let currentSection = $("#section_main");
 
-		let jump = false;
+		let jump = true;
 
         function handleJump(){
         	if(!jump){ return; }
